# smartwatch-automater

./: README.md  config.example.yaml  pyproject.toml
smartwatch/: __main__.py  cli.py  config.py  debouncer.py  handlers.py  watcher.py
smartwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_debouncer.py  test_handlers.py
